# node-crc

./: CHANGELOG.md  Cargo.toml  README.md  build.sh  bun.lockb  eslint.config.mjs  node-crc.node  package-lock.json  package.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml
lib/: lib.d.ts  lib.js
src/: lib.rs  lib.ts
tests/: tests.test.ts
