[package]
name = "node-crc"
version = "3.0.0"
edition = "2021"
repository = "https://github.com/swrlab/node-crc"
keywords = ["node.js", "crc64"]
categories = []
description = "To compute CRC64 values using built-in functions and pre-built binaries."
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
codegen-units = 1

[dependencies.crc-any]
version = "2"
default-features = false
features = ["heapless"]

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
